some linting